<resources>
    <string name="app_name">AirlineReservation</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="search_result">Search result:</string>
    <string name="date">Date</string>
    <string name="back">Back</string>
    <string name="search">Search</string>
    <string name="welcomQuery">Please input the info to query the filghts</string>
    <string name="arrival">arrival</string>
    <string name="departure">departure</string>
    <string name="account">Account</string>
    <string name="password">Password</string>
    <string name="passenger_name">Passenger Name</string>
    <string name="emergency_contact">Emergency Contact</string>
    <string name="passenger_id">Passenger ID</string>
    <string name="passenger_phone">Passenger Phone</string>
    <string name="please_fill_in_the_following_infomation">Please fill in the following infomation</string>
    <string name="emergenct_phone">Emergenct Phone</string>
    <string name="emergency_phone">Emergency Phone</string>
</resources>
