<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="io.github.bugix_zy.airlinereservation.CustomerQueryActivity">

    <Button
        android:text="@string/back"
        android:id="@+id/backButton"
        android:textSize="30sp"
        android:layout_width="200dp"
        android:layout_alignBottom="@+id/searchButton"
        android:layout_toEndOf="@+id/searchButton"
        android:layout_marginStart="200dp"
        android:layout_alignTop="@+id/searchButton"
        android:layout_height="70dp"
        android:onClick="onClickedBackButton" />

    <Button
        android:text="@string/search"
        android:layout_width="200dp"
        android:layout_marginBottom="126dp"
        android:id="@+id/searchButton"
        android:textSize="30sp"
        android:layout_marginStart="263dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_height="70dp"
        android:onClick="onClickedSearchButton" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/departText"
        android:layout_above="@+id/searchButton"
        android:layout_alignParentStart="true"
        android:layout_marginStart="38dp"
        android:layout_marginBottom="204dp"
        android:textSize="30sp" />

    <TextView
        android:text="Welcome to the airline reseravtion system"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="26dp"
        android:layout_marginTop="22dp"
        android:id="@+id/welcome"
        android:textSize="24sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/arrivalText"
        android:textSize="30sp"
        android:layout_alignBottom="@+id/departText"
        android:layout_toEndOf="@+id/searchButton"
        android:layout_alignTop="@+id/departText" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:layout_alignBottom="@+id/arrivalText"
        android:layout_toEndOf="@+id/backButton"
        android:id="@+id/dateText"
        android:textSize="30sp" />

    <TextView
        android:text="@string/arrival"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/arrivalTextView"
        android:layout_alignTop="@+id/dapartureTextView"
        android:layout_toEndOf="@+id/welcome"
        android:textSize="24sp" />

    <TextView
        android:text="@string/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dateTextView"
        android:layout_alignBottom="@+id/arrivalTextView"
        android:layout_alignStart="@+id/dateText"
        android:textSize="24sp" />

    <TextView
        android:text="TextView"
        android:layout_height="wrap_content"
        android:layout_below="@+id/arrivalText"
        android:layout_marginTop="93dp"
        android:id="@+id/queryTextView"
        android:layout_width="match_parent"
        android:textSize="24sp" />

    <TextView
        android:text="@string/departure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="11dp"
        android:id="@+id/dapartureTextView"
        android:textSize="24sp"
        android:layout_above="@+id/departText"
        android:layout_alignStart="@+id/departText" />

</RelativeLayout>
